First Commit. Trained model and saved it.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,12 @@
 ipykernel
 python-dotenv
+pandas
+tensorflow
+numpy
+scikit-learn
+scipy
+matplotlib
+seaborn
+nltk
+# Optional for Jupyter Notebook
+jupyter
